Add methods for searching children of a HTMLElement by id or by className

--- a/spec/spec-runner.html
+++ b/spec/spec-runner.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 
+        <div>
+                <div>
+                        <div id="id"></div>
+                        <div></div>
+                        <div></div>
+                </div>
+                <div>
+                        <div></div>
+                </div>
+        </div>
+
 <head>
     <title>DomUtil Spec Runner</title>
     <!-- Jasmine.css -->
